添加 mongodb服务 以及更动说明
